--- a/app-server/weblog-app-pod.yml
+++ b/app-server/weblog-app-pod.yml
@@ -69,3 +69,19 @@ spec:
           value: "weblog"
         - name: "MONGODB_REPLICASET"
           value: "rs0"
+
+---
+apiVersion: v1
+kind: Service
+metadata: 
+  name: app-svc
+  namespace: default
+  labels: weblog
+  type: application
+spec:
+  ports:
+  - port: 3000
+    targetPort: 3000
+  selector:
+    app: weblog
+    type: application
